Changes, Fix errors