@@ -7,6 +7,8 @@ public class TestMain {
 
 
 	public static void main(String[] args) {
+		// Add following VM Option to resolve Illegal-reflection-access-exception-thingy
+		// --add-opens java.base/java.lang=com.google.guice
 		Injector injector = Guice.createInjector(new BasicModule());
 		TestClass test = injector.getInstance(TestClass.class);
 		test.test();
